@@ -145,8 +145,6 @@
   <string id="208">Play</string>
   <string id="209">Next</string>
   <string id="210">Previous</string>
-  <string id="211">Searching for applications</string>
-  <string id="212">Applications found</string>
   <string id="213">Calibrate User Interface...</string>
   <string id="214">Video Calibration...</string>
   <string id="215">Soften</string>
@@ -157,10 +155,8 @@
   <string id="220">Remote Share</string>
   <string id="221">Network is not connected</string>
   <string id="222">Cancel</string>
-  <string id="223">Auto Widescreen Switching</string>
   <string id="224">Speed</string>
   <string id="225">Transition Time</string>
-  <string id="226">Enable PAL60</string>
   <string id="227">Lookup audio CDs on freedb</string>
   <string id="228">Shuffle Playlist on Load</string>
   <string id="229">HD Spindown Time</string>
@@ -219,7 +215,6 @@
   <string id="282">found %i items</string>
   <string id="283">Search Results</string>
   <string id="284">No results found</string>
-  <string id="285">Deinterlace Filter</string>
   <string id="286">Postprocessing Filter</string>
   <string id="287">Subtitles</string>
   <string id="288">Font</string>
@@ -229,13 +224,8 @@
   <string id="292">Audio</string>
   <string id="293">Subtitles</string>
   <string id="294">Create bookmark</string>
-  <string id="295">Cycle bookmarks</string>
   <string id="296">Clear bookmarks</string>
   <string id="297">Audio Delay</string>
-  <string id="298">Slider</string>
-  <string id="300">1. Language</string>
-  <string id="301">2. Volume</string>
-  <string id="302">3. Stream</string>
   <string id="303">Delay</string>
   <string id="304">Language</string>
   <string id="305">Enabled</string>
@@ -281,8 +271,6 @@
   <string id="345">Year</string>
   <string id="346">Stack</string>
   <string id="347">Unstack</string>
-  <string id="348">Flatten Directory Hierarchy</string>
-  <string id="349">Show only Default.xbe</string>
   <string id="350">Programs</string>
   <string id="351">Off</string>
   <string id="352">Dim</string>
@@ -391,7 +379,6 @@
   <string id="455">Rows</string>
   <string id="456">Mode</string>
   <string id="457">Switch view</string>
-  <string id="458">B/Mark</string>
   <string id="459">Subs</string>
   <string id="460">Audio Stream</string>
   <string id="461">[active]</string>
@@ -405,8 +392,6 @@
   <string id="469">OSD Position</string>
   <string id="470">Credits</string>
   <string id="471">Modchip</string>
-  <string id="472">Video OSD Timeout</string>
-  <string id="473">High Quality Resampling</string>
   <string id="474">Off</string>
   <string id="475">Music Only</string>
   <string id="476">Music &amp; Video</string>
@@ -423,7 +408,6 @@
   <string id="487">Repeat One</string>
   <string id="488">Repeat Folders</string>
   <string id="489">Auto Play Next Item</string>
-  <string id="490">Auto switch list and icons in songs</string>
   <string id="491">- Use big icons</string>
   <string id="492">Resize Vobsubs</string>
   <string id="493">Advanced Options (Experts Only!)</string>
@@ -439,10 +423,7 @@
   <string id="503">Busy</string>
   <string id="504">Empty</string>
   <string id="505">Loading media info from files...</string>
-  <string id="506">Use Directory Names for Description</string>
   <string id="507">Sort by: Usage</string>
-  <string id="508">Do not use Shortcuts or Scan</string>
-  <string id="509">Cache Program Thumbnails</string>
   <string id="510">Enable Visualisations</string>
   <string id="511">Enable video mode switching</string>
   <string id="512">Startup Window</string>
@@ -477,7 +458,7 @@
   <string id="606">Track Number:</string>
   <string id="607">To:</string>
   <string id="608">Could not rip CD or Track</string>
-  <string id="609">CDDARipPath is not set in XboxMediaCenter.xml</string>
+  <string id="609">CDDARipPath is not set.</string>
 
   <string id="620">CD Ripping</string>
   <string id="621">Encoder</string>
@@ -507,8 +488,6 @@
   <string id="700">Cleaning up Library</string>
   <string id="701">Removing old songs from the Library</string>
   <string id="702">This path has been scanned before</string>
-  <string id="703">Press Yes to update all songs in this path</string>
-  <string id="704">Press No to just add new songs</string>
   <string id="705">Network</string>
   <string id="706">HTTP Proxy Host</string>
   <string id="707">HTTP Proxy Port</string>
@@ -637,8 +616,6 @@
   <string id="1221">Music &amp; Video &amp; Pictures</string>
   <string id="1222">Music &amp; Video &amp; Pictures &amp; Files</string>
   <string id="1223">Disabled</string>
-  <string id="1224">Normal User</string>
-  <string id="1225">Advanced User</string>
   <string id="1226">Files &amp; Music &amp; Video</string>
   <string id="1227">Files &amp; Pictures &amp; Music</string>
   <string id="1228">Files &amp; Pictures &amp; Video</string>
@@ -678,7 +655,8 @@
   <string id="1408">Ice</string>
   <string id="1409">Crystals</string>
   <string id="1410">Calm</string>
-
+  <string id="1411">with</string>
+  <string id="1412">windy</string>
   <string id="2050">Runtime:</string>
 
   <string id="4501">LCD Type</string>
@@ -777,8 +755,6 @@
   <string id="12320">c</string>
   <string id="12321">ok</string>
   <string id="12322">*</string>
-
-  <string id="12324">XBMC Master Lock</string>
   <string id="12325">Locked! Enter Code...</string>
   <string id="12326">Enter password</string>
   <string id="12327">Enter Master Code</string>
@@ -790,7 +766,6 @@
   <string id="12333">Unlock</string>
   <string id="12334">Reset Lock</string>
   <string id="12335">Remove Lock</string>
-  <string id="12336">Select type of lock to use:</string>
   <string id="12337">Numeric Password</string>
   <string id="12338">Gamepad button combo</string>
   <string id="12339">Full-text Password</string>
@@ -803,32 +778,15 @@
   <string id="12346">Password retry limit exceeded.</string>
   <string id="12347">The XBOX will now shut off.</string>
   <string id="12348">Item Locked</string>
-  <string id="12349">Remember Master Code until next boot?</string>
-  <string id="12350">(Opening any item in Settings will</string>
-  <string id="12351">automatically re-enable Master Lock.)</string>
-  <string id="12352">Enter Master Code button combo and press Start</string>
   <string id="12353">Reactivate Lock</string>
-  <string id="12354">Override folder locks until next boot?</string>
-  <string id="12355">Automatically re-enable folder locks.)</string>
   <string id="12356">Change Lock</string>
   <string id="12357">Share Lock</string>
   <string id="12358">Password entry was blank. Try again.</string>
   <string id="12360">Master Lock</string>
-  <string id="12361">Max Retry</string>
   <string id="12362">Shutdown xbox if master lock retries exceeded</string>
-  <string id="12363">Protect Shares</string>
-  <string id="12364">Master Mode</string>
-  <string id="12365">Master Code</string>
-  <string id="12366">Master Lock is changed. Master Code is now set to:</string>
   <string id="12367">Master Code is not Valid!</string>
   <string id="12368">Please Enter a Valid Master Code!</string>
-  <string id="12369">XBMC Startup Lock</string>
-  <string id="12370">Master Lock Mode changed, the Master Code wasn't set!</string>
-  <string id="12371">Please Set a new Master Code!</string>
-  <string id="12372">Lock Settings &amp; My Files</string>
   <string id="12373">Settings &amp;  My Files</string>
-  <string id="12374">Lock Media</string>
-  <string id="12375">Master User Mode</string>
   <string id="12376">Set as default for all Movies</string>
   <string id="12377">This will reset any previously saved values</string>
   <string id="12378">Show each image for</string>
@@ -841,8 +799,6 @@
   <string id="12385">Day/Month</string>
   <string id="12386">Month/Day</string>
   <string id="12387">Rescan database</string>
-  <string id="12388">Master User</string>
-
   <string id="12390">System Uptime</string>
   <string id="12391">Minutes</string>
   <string id="12392">Hours</string>
@@ -883,19 +839,15 @@
   <string id="13166">Head/MicroPhone On Port:</string>
   <string id="13167">MemoryStick On Port:</string>
   <string id="13168">IR-Remote On Port:</string>
-  <string id="13169">Bypass CD Selection</string>
   <string id="13170">Never</string>
   <string id="13171">Immediately</string>
   <string id="13172">After %i secs</string>
 
   <string id="13200">Profiles</string>
   <string id="13201">Delete profile '%s'?</string>
-  <string id="13202">Save current settings as profile...</string>
-  <string id="13203">Profile '%s' loaded successfully</string>
   <string id="13204">Last loaded profile:</string>
   <string id="13205">Unknown</string>
   <string id="13206">Overwrite</string>
-  <string id="13207">Overwrite profile '%s'?</string>
   <string id="13208">Alarm clock</string>
   <string id="13209">Alarm clock interval (in minutes)</string>
   <string id="13210">Started, alarm in %im</string>
@@ -974,7 +926,6 @@
   <string id="13334">Edit Label</string>
   <string id="13335">Make Default</string>
   <string id="13336">Remove Button</string>
-  <string id="13337">- 2 Channel PCM Passthrough</string>
   <string id="13338">Front LED</string>
   <string id="13339">Front LED Colour</string>
   <string id="13340">Leave As Is</string>
@@ -999,19 +950,6 @@
   <string id="13359">Set Artist Thumb</string>
   <string id="13360">Generate Thumbs</string>
   <string id="13361">Enable Voice</string>
-  <string id="13362">Voice Mask</string>
-  <string id="13363">- Enable Spectrum Energy Weight</string>
-  <string id="13364">-- Spectrum Energy Weight Value</string>
-  <string id="13365">- Enable Pitch Scaling</string>
-  <string id="13366">-- Pitch Scaling Value</string>
-  <string id="13367">- Enable Whisper Factor</string>
-  <string id="13368">-- Whisper Factor Value</string>
-  <string id="13369">- Enable Robotic Factor</string>
-  <string id="13370">-- Robotic Factor Value</string>
-  <string id="13371">- Port 1 Voice</string>
-  <string id="13372">- Port 2 Voice</string>
-  <string id="13373">- Port 3 Voice</string>
-  <string id="13374">- Port 4 Voice</string>
   <string id="13375">Enable Device</string>
   <string id="13376">Volume</string>
   <string id="13377">Default View Mode</string>
@@ -1046,7 +984,6 @@
 
   <string id="14000">Stack</string>
   <string id="14001">Unstack</string>
-  <string id="14002">Stacking: Fuzzy</string>
   <string id="14003">Downloading playlist file...</string>
   <string id="14004">Downloading streams list...</string>
   <string id="14005">Parsing streams list...</string>
@@ -1118,8 +1055,8 @@
   <string id="14073">XLink Kai is not enabled.</string>
 
   <string id="15000">XLink Kai</string>
-  <string id="15001">The service is not connected, would you like to attempt</string>
-  <string id="15002">reconnecting it with Xbox Media Center?</string>
+  <string id="15001">The service is not connected.</string>
+  <string id="15002">Attempt to reconnect?</string>
   <string id="15003">Enter your message</string>
   <string id="15004">You've been invited to play %s.</string>
   <string id="15005">Date: %s</string>
@@ -1179,8 +1116,6 @@
   <string id="15059">Invite accepted!</string>
   <string id="15060">Message Here</string>
   <string id="15061">You're invited to play %s.</string>
-  <string id="15062">Use alternate mplayer location</string>
-
   <string id="15100">Library</string>
   <string id="15101">Database</string>
   <string id="15102">* All Albums</string>
@@ -1191,7 +1126,6 @@
   <string id="15107">Buffering...</string>
   <string id="15108">Navigation Sounds</string>
   <string id="15109">Skin Default</string>
-  <string id="15110">Controller Rumble</string>
   <string id="15111">Skin Theme</string>
   <string id="15112">Default Theme</string>
 
@@ -1272,9 +1206,9 @@
   <string id="16017">Enter Search String</string>
   <string id="16018">None</string>
   <string id="16019">Auto Select</string>
-  <string id="16020">DeInterlace</string>
-  <string id="16021">Sync Odd</string>
-  <string id="16022">Sync Even</string>
+  <string id="16020">Deinterlace</string>
+  <string id="16021">Bob</string>
+  <string id="16022">Bob (Inverted)</string>
   <string id="16023">Interlaced Handling</string>
   <string id="16024">Canceling...</string>
   <string id="16025">Enter the Artist Name</string>
@@ -1298,4 +1232,147 @@
   <string id="16108">Use only NTSC-J</string>
   <string id="16109">Use only PAL-60</string>
   <string id="16110">For 60hz Games</string>
+
+  <string id="20000">CDDA Rip Folder</string>
+  <string id="20001">Use external DVD Player</string>
+  <string id="20002">External DVD Player</string>
+  <string id="20003">Trainers Folder</string>
+  <string id="20004">Screenshot Folder</string>
+  <string id="20005">Recordings Folder</string>
+  <string id="20006">Playlists Folder</string>
+  <string id="20007">Recordings</string>
+  <string id="20008">Screenshots</string>
+  <string id="20009">Use XBMC</string>
+  <string id="20010">Artist Image</string>
+  <string id="20011">Music Playlists</string>
+  <string id="20012">Video Playlists</string>
+  <string id="20013">Do you wish to launch the game?</string>
+  <string id="20014">Sort by: Playlist</string>
+  <string id="20015">IMDb Thumb</string>
+  <string id="20016">Current Thumb</string>
+  <string id="20017">Local Thumb</string>
+  <string id="20018">No Thumb</string>
+  <string id="20019">Choose Thumbnail</string>
+  <string id="20020">Cannot use both KAI and trainer</string>
+  <string id="20021">Choose which you want to use</string>
+  <string id="20022"></string>
+  <string id="20023">Conflict</string>
+  <string id="20024">Scan new</string>
+  <string id="20025">Scan all</string>
+  <string id="20026">Region</string>
+  <string id="20038">Lock music section</string>
+  <string id="20039">Lock video section</string>
+  <string id="20040">Lock pictures section</string>
+  <string id="20041">Lock programs and scripts sections</string>
+  <string id="20042">Lock filemanager</string>
+  <string id="20043">Lock settings</string>
+  <string id="20044">Start fresh</string>
+  <string id="20045">Enter master mode</string>
+  <string id="20046">Leave master mode</string>
+  <string id="20047">Create profile '%s' ?</string>
+  <string id="20048">Start with fresh settings</string>
+  <string id="20049">Best Available</string>
+  <string id="20050">Autoswitch between 16x9 and 4x3</string>
+  <string id="20051">Treat stacked files as single file</string>
+  <string id="20052">Caution</string>
+  <string id="20053">Left master mode</string>
+  <string id="20054">Entered master mode</string>
+  <string id="20055">Allmusic.com Thumb</string>
+  <string id="20056">Source Thumbnail</string>
+  <string id="20057">Remove Thumbnail</string>
+  <string id="20058">Add Profile...</string>
+  <string id="20059">Query Info For All Albums</string>
+  <string id="20060">Media info</string>
+  <string id="20061">Separate</string>
+  <string id="20062">Shares with default</string>
+  <string id="20063">Shares with default (read only)</string>
+  <string id="20064">Copy default</string>
+  <string id="20065">Profile picture</string>
+  <string id="20066">Lock preferences</string>
+  <string id="20067">Edit profile</string>
+  <string id="20068">Profile lock</string>
+  <string id="20069">Could not create folder</string>
+  <string id="20070">Profile directory</string>
+  <string id="20071">Start with fresh media sources</string>
+  <string id="20072">Make sure the select folder is writable</string>
+  <string id="20073">and that the new folder name is valid</string>
+  <string id="20074">MPAA Rating:</string>
+  <string id="20075">Enter master lock code</string>
+  <string id="20076">Ask for master lock code on startup</string>
+  <string id="20077">Skin Settings</string>
+  <string id="20078">- no link set -</string>
+  <string id="20079">Enable Animations</string>
+  <string id="20080">Disable RSS during Music</string>
+  <string id="20081">Enable Bookmark Buttons</string>
+  <string id="20082">Show XLink Kai Info</string>
+  <string id="20083">Show Music info</string>
+  <string id="20084">Show Weather info</string>
+  <string id="20085">Show System info</string>
+  <string id="20086">Show Available Disc Space C: E: F:</string>
+  <string id="20087">Show Available Disc Space E: F: G:</string>
+  <string id="20088">Weather Info</string>
+  <string id="20089">Drive Space Free</string>
+  <string id="20090">Enter the name of an existing Share</string>
+  <string id="20091">Lock Code</string>
+  <string id="20092">Load profile</string>
+  <string id="20093">Profile name</string>
+  <string id="20094">Media sources</string>
+  <string id="20095">Enter profile lock code</string>
+  <string id="20096">Login screen</string>
+  <string id="20097">Fetching album info</string>
+  <string id="20098">Fetching info for album</string>
+  <string id="20099">Can't rip CD or Track while playing from CD</string>
+  <string id="20100">Master Code and Locks</string> 
+  <string id="20101">Entering master code always enables master mode</string>
+  <string id="20102">or copy from default?</string>
+  <string id="20103">Save changes to profile?</string>
+  <string id="20104">Old settings found.</string>
+  <string id="20105">Do you want to use them?</string>
+  <string id="20106">Old media sources found.</string>
+  <string id="20107">Separate (locked)</string>
+  <string id="20108">Root</string>
+  <string id="20109">Skin Zoom</string>
+  <string id="20110">UPnP Client</string>
+  <string id="20111">Autostart</string>
+  <string id="20112">Last login: %s</string>
+  <string id="20113">Never logged on</string>
+  <string id="20114">Profile %i / %i</string>
+  <string id="20115">User Login / Select a Profile</string>
+  <string id="20116">Use lock on login screen</string>
+  <string id="20117">Invalid lock code.</string>
+  <string id="20118">This requires the master lock to be set.</string>
+  <string id="20119">Would you like to set it now?</string>
+  <string id="20120">Loading program information</string>
+  <string id="20121">Party on!</string>
+  <string id="20122">True</string>
+  <string id="20123">Mixing drinks</string>
+  <string id="20124">Filling glasses</string>
+  <string id="20125">Logged on as</string>
+  <string id="20126">Log off</string>
+  <string id="20128">Go to Root</string>
+  <string id="20129">Weave</string>
+  <string id="20130">Weave (inverted)</string>
+  <string id="20131">Blend</string>
+  <string id="20132">Restart Video</string>
+  <string id="20133">Edit Network Location</string>
+  <string id="20134">Remove Network Location</string>
+  <string id="20135">Do you want to scan the folder?</string>
+  <string id="20136">Memory Unit</string>
+  <string id="20137">UnMounted from Drive</string>
+  <string id="20138">Mounted to Drive</string>
+  <string id="20139">Unable to Mount</string>
+  <string id="20140">Lock Screensaver</string>
+  <string id="20141">Set</string>
+  <string id="20142">Username</string>
+  <string id="20143">Enter password for</string>
+  <string id="20144">Shutdown Timer</string>
+  <string id="20145">Shutdown interval (in minutes)</string>
+  <string id="20146">Started, shutdown in %im</string>
+  <string id="20147">Shutdown in 30 minutes</string>
+  <string id="20148">Shutdown in 60 minutes</string>
+  <string id="20149">Shutdown in 120 minutes</string>
+  <string id="20150">Custom Shutdown Timer</string>
+  <string id="20151">Cancel Shutdown Timer</string>
+  <string id="20152">Lock preferences for %s</string>
+  <string id="29999">Auto Flicker Filter Patch</string>
 </strings>
