@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 27-08-2006 added: all strings are now localizable. there are about 150 new strings to translate. final call to all translators, have a blast! :)
  - 27-08-2006 fixed: [ 1530771 ] "Open tray" problem
  - 27-08-2006 changed: you can now have okay/cancel buttons in the lock dialog. skinners are free to update if they feel like it. id 28=okay, id 29=cancel.
  - 27-08-2006 changed: dialog.close builtin now takes an additional true parameter to force the closing (no anims etc).
